--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <img src="img/logo2.png" alt="inimisttech Logo" class="img-fluid" style="max-height: 50px;">
                 </a>
 
-                <button type="button" class="navbar-toggler me-0 bg-primary" data-bs-toggle="collapse"
+                <button type="button" class="navbar-toggler me-0 bg-#3584ae;" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                     aria-label="Toggle navigation" id="navbarToggler">
                     <span class="navbar-toggler-icon" id="togglerIcon"></span>
