--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@
                     </div>
                     <div class="d-flex flex-column pe-2">
                         <span class="text-gray">Have any questions?</span>
-                        <span class="text-dark"><img src="img/phone2.png" alt="inimisttech Logo" class="img-fluid"
-                                style="max-height: 50px;" </span>
+                        <span class="text-dark">
+                            <img src="img/phone2.png" alt="inimisttech Logo" class="img-fluid" style="max-height: 50px;">
+                          </span>
+                          
                     </div>
                 </div>
             </nav>
@@ -161,7 +163,7 @@
                     <img src="img/carousel-1.jpg" class="img-fluid" alt="First slide">
                     <div class="carousel-caption">
                         <div class="container carousel-content">
-                            <h6 class="text-primary h4 animated fadeInUp">Best IT Solutions</h6>
+                            <h6 class="text-white h4 animated fadeInUp">Best IT Solutions</h6>
                             <h1 class="text-white display-1 mb-4 animated fadeInRight">An Innovative IT Solutions Agency
                             </h1>
                             <p class="mb-4 text-white fs-5 animated fadeInDown">Lorem ipsum dolor sit amet elit. Sed
@@ -181,7 +183,7 @@
                     <img src="img/carousel-2.jpg" class="img-fluid" alt="Second slide">
                     <div class="carousel-caption">
                         <div class="container carousel-content">
-                            <h6 class="text-primary h4 animated fadeInUp" style="color: #1842b6;">Best IT Solutions</h6>
+                            <h6 class="text-white h4 animated fadeInUp" style="color: #1842b6;">Best IT Solutions</h6>
 
                             <h1 class="text-white display-1 mb-4 animated fadeInLeft">Quality Digital Services You
                                 Really Need!</h1>
