--- a/index.html
+++ b/index.html
@@ -946,86 +946,84 @@
 
 
     <!--------------------- Footer Start ----------------------------------->
-    <div class="container-fluid footer wow fadeIn" style="background-color: #0d6efd;" data-wow-delay=".3s">
-        <div class="container pt-5 pb-4" style="padding-left: 0; padding-right: 0;">
-            <div class="row" style="display: flex; justify-content: space-between; gap:10px;">
-                <!-- Logo and Social Media (Blue background) -->
-                <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
-                    style="background-color: #f8f9fa; color: #333;">
-                    <a href="index.html">
-                        <img src="img/logo2.png" alt="Inimisttech Logo" class="img-fluid" style="max-height: 50px;">
-                    </a>
-                    <p class="mt-4 text-dark">Inimist Technologies is a Web Design & Development company located in
-                        Mohali, Chandigarh area. We offer various types of IT services and web consultancy. We majorly
-                        work in Web & Mobile App Development, Search Engine Services.</p>
-                    <div class="d-flex">
-                        <a href="" class="btn btn-outline-light btn-square rounded-circle me-2"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a href="" class="btn btn-outline-light btn-square rounded-circle me-2"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="" class="btn btn-outline-light btn-square rounded-circle me-2"><i
-                                class="fab fa-instagram"></i></a>
-                        <a href="" class="btn btn-outline-light btn-square rounded-circle"><i
-                                class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-
-                <!-- Short Links (Gray background) -->
-                <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
-                    style="background-color: #f8f9fa; color: #333;">
-                    <a href="#" class="h3 text-dark">Short Links</a>
-                    <div class="mt-4 d-flex flex-column">
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>About Us</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Contact Us</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Our Services</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Our Projects</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Latest Blog</a>
-                    </div>
-                </div>
-
-                <!-- Help Links (Gray background) -->
-                <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
-                    style="background-color: #f8f9fa; color: #333;">
-                    <a href="#" class="h3 text-dark">Help Links</a>
-                    <div class="mt-4 d-flex flex-column">
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Terms Of Use</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Privacy Policy</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Help</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>FAQs</a>
-                        <a href="" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Contact</a>
-                    </div>
-                </div>
-
-                <!-- Contact Info (Blue background) -->
-                <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
-                    style="background-color: #f8f9fa; color: #333;">
-                    <a href="#" class="h3 text-dark">Contact Us</a>
-                    <div class="text-dark mt-4 d-flex flex-column">
-                        <a href="#" class="pb-3"><i class="fas fa-map-marker-alt me-2"></i> Mohali Tower, Punjab,
-                            India</a>
-                        <a href="#" class="py-3"><i class="fas fa-phone-alt me-2"></i><img src="img/phone.png"
-                                alt="inimisttech Logo" class="img-fluid" style="max-height: 50px;" </a>
-                            <a href="#" class="py-3"><i class="fas fa-envelope me-2"></i><img src="img/email4.png"
-                                    alt="inimisttech Logo" class="img-fluid" style="max-height: 50px;"></a>
-                    </div>
+    <!-- Footer Section Start -->
+<footer class="container-fluid footer wow fadeIn" style="background-color: #0d6efd;" data-wow-delay=".3s">
+    <div class="container pt-5 pb-4" style="padding-left: 0; padding-right: 0;">
+        <div class="row" style="display: flex; justify-content: space-between; gap:10px;">
+            <!-- Logo and Social Media -->
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
+                style="background-color: #f8f9fa; color: #333;">
+                <a href="index.html">
+                    <img src="img/logo2.png" alt="Inimisttech Logo" class="img-fluid" style="max-height: 50px;">
+                </a>
+                <p class="mt-4 text-dark">Inimist Technologies is a Web Design & Development company located in
+                    Mohali, Chandigarh area. We offer various types of IT services and web consultancy. We majorly
+                    work in Web & Mobile App Development, Search Engine Services.</p>
+                <div class="d-flex">
+                    <a href="#" class="btn btn-outline-light btn-square rounded-circle me-2"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="btn btn-outline-light btn-square rounded-circle me-2"><i
+                            class="fab fa-twitter"></i></a>
+                    <a href="#" class="btn btn-outline-light btn-square rounded-circle me-2"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="#" class="btn btn-outline-light btn-square rounded-circle"><i
+                            class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
 
-            <!-- Footer Bottom -->
-            <hr class="text-light mt-5 mb-4">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start">
-                    <span class="text-light"><a href="#" class="text-light"><i
-                                class="fas fa-copyright text-white me-2"></i>inimisttech</a>, All rights
-                        reserved.</span>
+            <!-- Short Links -->
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
+                style="background-color: #f8f9fa; color: #333;">
+                <h3 class="text-dark">Short Links</h3>
+                <div class="mt-4 d-flex flex-column">
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>About Us</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Contact Us</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Our Services</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Our Projects</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Latest Blog</a>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <span class="text-light">Developed By <a href="https://inimisttech"
-                            class="text-light">Inimisttech</a></span>
+            </div>
+
+            <!-- Help Links -->
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
+                style="background-color: #f8f9fa; color: #333;">
+                <h3 class="text-dark">Help Links</h3>
+                <div class="mt-4 d-flex flex-column">
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Terms Of Use</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Privacy Policy</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Help</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>FAQs</a>
+                    <a href="#" class="mb-2 text-dark"><i class="fas fa-angle-right me-2"></i>Contact</a>
+                </div>
+            </div>
+
+            <!-- Contact Info -->
+            <div class="col-lg-3 col-md-6 col-sm-12 footer-column mb-4"
+                style="background-color: #f8f9fa; color: #333;">
+                <h3 class="text-dark">Contact Us</h3>
+                <div class="text-dark mt-4 d-flex flex-column">
+                    <p class="pb-3"><i class="fas fa-map-marker-alt me-2"></i> Mohali Tower, Punjab, India</p>
+                    <p class="py-3"><i class="fas fa-phone-alt me-2"></i> +91-123-456-7890</p>
+                    <p class="py-3"><i class="fas fa-envelope me-2"></i> info@inimisttech.com</p>
                 </div>
             </div>
         </div>
+
+        <!-- Footer Bottom -->
+        <hr class="text-light mt-5 mb-4">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start">
+                <span class="text-light"><a href="#" class="text-light"><i
+                            class="fas fa-copyright text-white me-2"></i>Inimisttech</a>, All rights
+                    reserved.</span>
+            </div>
+            <div class="col-md-6 text-center text-md-end">
+                <span class="text-light">Developed By <a href="https://inimisttech" class="text-light">Inimisttech</a></span>
+            </div>
+        </div>
     </div>
+</footer>
+<!-- Footer Section End -->
 
 
 
